# mandlebrot

./: .gitmodules  CMakeLists.txt  README.md
include/: mandlebrot.hpp  parfait.hpp
include/mandlebrot/: exception.hpp  memory.hpp
include/parfait/: allocated.hpp  array.hpp  exception.hpp  memory.hpp  pointer.hpp  transparent.hpp  variadic.hpp
src/: memory.cpp
test/: main.cpp
